Prepared to release 0.1.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 # replace with your username:
 name = screen2c
-version = 0.0.2
+version = 0.1.0
 author = Denis Pleic
 maintainer = GingerIndustries
 url = https://github.com/GingerIndustries/screen2c
 project_urls = 
 	Documentation = https://screen2c.readthedocs.io
 	Original code = https://gist.github.com/DenisFromHR/cc863375a6e19dce359d
-description = An interface to I2C screens with a PCF8574T backpack
+description = An interface to I2C screens with a PCF8574 backpack
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
