--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,6 @@
 [build-system]
 requires = [
     "setuptools>=42",
-    "wheel",
-    "smbus"
+    "wheel"
 ]
 build-backend = "setuptools.build_meta"
